fix(linkerd): api version for k8s >= v1.17

--- a/charts/linkerd/templates/ingress.yaml
+++ b/charts/linkerd/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.linkerd.ingress.enabled -}}
 {{- $globalContext := . -}}
 {{- $servicePort := .Values.linkerd.httpPort -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
