--- a/charts/linkerd/templates/daemonset.yaml
+++ b/charts/linkerd/templates/daemonset.yaml
@@ -8,6 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
   name: {{ template "linkerd.fullname" . }}
 spec:
+  selector: linkerd
   template:
     metadata:
       annotations:
