fix(linkerd): still the selector

--- a/charts/linkerd/templates/daemonset.yaml
+++ b/charts/linkerd/templates/daemonset.yaml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "linkerd.fullname" . }}
-      release: {{ template "{{ .Release.Name }}" . }}
+      release: "{{ .Release.Name }}"
   template:
     metadata:
       annotations:
