--- a/apps/templates/elastic.yaml
+++ b/apps/templates/elastic.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: linkerd
+    namespace: elastic-stack
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
