--- a/charts/apps/templates/namespaces.yaml
+++ b/charts/apps/templates/namespaces.yaml
@@ -16,7 +16,7 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: fluent-bit
+  name: fluentd-elastic
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 ---
