--- a/charts/apps/templates/namespaces.yaml
+++ b/charts/apps/templates/namespaces.yaml
@@ -26,3 +26,10 @@ metadata:
   name: nginx-ingress
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: prometheus-operator
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
