--- a/charts/apps/templates/dashboard.yaml
+++ b/charts/apps/templates/dashboard.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: kubernetes-dashboard
+    namespace: kube-system
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
