--- a/charts/kubernetes-dashboard/values.yaml
+++ b/charts/kubernetes-dashboard/values.yaml
@@ -109,7 +109,7 @@ resources:
 ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
   ##
-  enabled: true
+  enabled: false
 
   ## Kubernetes Dashboard Ingress annotations
   ##
