--- a/charts/elasticsearch/templates/configmap.yaml
+++ b/charts/elasticsearch/templates/configmap.yaml
@@ -60,11 +60,12 @@ data:
     xpack.security.enabled: false
     xpack.watcher.enabled: false
 {{- end }}
-{{- else if hasPrefix "6." .Values.appVersion }}
+{{- else if hasPrefix "7." .Values.appVersion }}
     # see https://github.com/kubernetes/kubernetes/issues/3595
     bootstrap.memory_lock: ${BOOTSTRAP_MEMORY_LOCK:false}
 
     discovery:
+      seed_hosts: []
       zen:
         ping.unicast.hosts: ${DISCOVERY_SERVICE:}
         minimum_master_nodes: ${MINIMUM_MASTER_NODES:2}
