--- a/charts/apps/templates/kibana.yaml
+++ b/charts/apps/templates/kibana.yaml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: elastic-stack
+  name: kibana
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: elastic-stack
+    namespace: kube-system
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/elastic-stack
+    path: charts/kibana
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
