--- a/charts/fluentd-elasticsearch/values.yaml
+++ b/charts/fluentd-elasticsearch/values.yaml
@@ -61,7 +61,7 @@ elasticsearch:
     user: "yourUser"
     password: "yourPass"
   includeTagKey: true
-  hosts: ["elasticsearch-client:9200"]
+  hosts: ["elasticsearch-master:9200"]
   indexName: "fluentd"
   logstash:
     enabled: false
