--- a/charts/apps/templates/fluentd.yaml
+++ b/charts/apps/templates/fluentd.yaml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: fluentd-elasticsearch
+  name: fluentd
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: kube-system
+    namespace: heket-efk
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/fluentd-elasticsearch
+    path: charts/fluentd
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
