--- a/charts/apps/templates/elasticsearch.yaml
+++ b/charts/apps/templates/elasticsearch.yaml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: kube-system
+    namespace: heket-efk
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
