--- a/charts/elasticsearch/requirements.yaml
+++ b/charts/elasticsearch/requirements.yaml
@@ -7,3 +7,7 @@ dependencies:
     version: 1.x.x
     repository: https://charts.bitnami.com/bitnami
     condition: global.fluentdEnabled
+  - name: metricbeat
+    version: 7.x.x
+    repository: https://helm.elastic.co
+    condition: global.metricbeatEnabled
