--- a/charts/elasticsearch/charts/metricbeat/values.yaml
+++ b/charts/elasticsearch/charts/metricbeat/values.yaml
@@ -66,7 +66,7 @@ daemonset:
         - drop_event.when.regexp:
             system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
       output.elasticsearch:
-        hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
+        hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-coordinating-only:9200}'
   nodeSelector: {}
   # A list of secrets and their paths to mount inside the pod
   # This is useful for mounting certificates for security other sensitive values
