--- a/charts/elasticsearch/charts/metricbeat/examples/6.x/test/goss-metrics.yaml
+++ b/charts/elasticsearch/charts/metricbeat/examples/6.x/test/goss-metrics.yaml
@@ -17,22 +17,16 @@ user:
     gid: 1000
 
 http:
-  https://security-master:9200/_cat/indices:
+  http://six-master:9200/_cat/indices:
     status: 200
     timeout: 2000
     body:
-      - 'metricbeat-7.6.2'
-    allow-insecure: true
-    username: '{{ .Env.ELASTICSEARCH_USERNAME }}'
-    password: '{{ .Env.ELASTICSEARCH_PASSWORD }}'
-  https://security-master:9200/_search?q=metricset.name:state_deployment:
+      - 'metricbeat-6.8.8'
+  http://six-master:9200/_search?q=metricset.name:state_deployment:
     status: 200
     timeout: 2000
     body:
-      - 'metricbeat-7.6.2'
-    allow-insecure: true
-    username: '{{ .Env.ELASTICSEARCH_USERNAME }}'
-    password: '{{ .Env.ELASTICSEARCH_PASSWORD }}'
+      - 'metricbeat-6.8.8'
 
 file:
   /usr/share/metricbeat/metricbeat.yml:
@@ -45,5 +39,5 @@ command:
   cd /usr/share/metricbeat && metricbeat test output:
     exit-status: 0
     stdout:
-      - 'elasticsearch: https://security-master:9200'
-      - 'version: 7.6.2'
+      - 'elasticsearch: http://six-master:9200'
+      - 'version: 6.8.8'
