--- a/charts/elasticsearch/charts/metricbeat/examples/6.x/test/goss.yaml
+++ b/charts/elasticsearch/charts/metricbeat/examples/6.x/test/goss.yaml
@@ -5,7 +5,15 @@ port:
     - '127.0.0.1'
 
 mount:
-  /usr/share/metricbeat/kube-state-metrics-metricbeat.yml:
+  /usr/share/metricbeat/data:
+    exists: true
+  /run/docker.sock:
+    exists: true
+  /var/lib/docker/containers:
+    exists: true
+    opts:
+      - ro
+  /usr/share/metricbeat/metricbeat.yml:
     exists: true
     opts:
       - ro
@@ -17,16 +25,16 @@ user:
     gid: 1000
 
 http:
-  http://oss-master:9200/_cat/indices:
+  http://six-master:9200/_cat/indices:
     status: 200
     timeout: 2000
     body:
-      - 'metricbeat-7.6.2'
-  http://oss-master:9200/_search?q=metricset.name:state_deployment:
+      - 'metricbeat-6.8.8'
+  http://six-master:9200/_search?q=metricset.name:container:
     status: 200
     timeout: 2000
     body:
-      - 'metricbeat-7.6.2'
+      - 'metricbeat-6.8.8'
 
 file:
   /usr/share/metricbeat/metricbeat.yml:
@@ -39,5 +47,5 @@ command:
   cd /usr/share/metricbeat && metricbeat test output:
     exit-status: 0
     stdout:
-      - 'elasticsearch: http://oss-master:9200'
-      - 'version: 7.6.2'
+      - 'elasticsearch: http://six-master:9200'
+      - 'version: 6.8.8'
