--- a/charts/elasticsearch/charts/metricbeat/examples/security/test/goss.yaml
+++ b/charts/elasticsearch/charts/metricbeat/examples/security/test/goss.yaml
@@ -9,6 +9,10 @@ mount:
     exists: true
   /run/docker.sock:
     exists: true
+  /var/lib/docker/containers:
+    exists: true
+    opts:
+      - ro
   /usr/share/metricbeat/metricbeat.yml:
     exists: true
     opts:
@@ -25,7 +29,7 @@ http:
     status: 200
     timeout: 2000
     body:
-      - 'metricbeat-7.7.0'
+      - 'metricbeat-7.6.2'
     allow-insecure: true
     username: '{{ .Env.ELASTICSEARCH_USERNAME }}'
     password: '{{ .Env.ELASTICSEARCH_PASSWORD }}'
@@ -33,7 +37,7 @@ http:
     status: 200
     timeout: 2000
     body:
-      - 'metricbeat-7.7.0'
+      - 'metricbeat-7.6.2'
     allow-insecure: true
     username: '{{ .Env.ELASTICSEARCH_USERNAME }}'
     password: '{{ .Env.ELASTICSEARCH_PASSWORD }}'
@@ -50,4 +54,4 @@ command:
     exit-status: 0
     stdout:
       - 'elasticsearch: https://security-master:9200'
-      - 'version: 7.7.0'
+      - 'version: 7.6.2'
