--- a/charts/elasticsearch/charts/metricbeat/templates/daemonset.yaml
+++ b/charts/elasticsearch/charts/metricbeat/templates/daemonset.yaml
@@ -38,20 +38,22 @@ spec:
         {{ $key }}: {{ $value | quote }}
         {{- end }}
     spec:
-      affinity: {{ toYaml ( .Values.affinity | default .Values.daemonset.affinity ) | nindent 8 }}
-      nodeSelector: {{ toYaml ( .Values.nodeSelector | default .Values.daemonset.nodeSelector ) | nindent 8 }}
-      tolerations: {{ toYaml ( .Values.tolerations | default .Values.daemonset.tolerations ) | nindent 8 }}
-      {{- if .Values.daemonset.hostNetworking }}
-      hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
+      {{- with .Values.tolerations }}
+      tolerations: {{ toYaml . | nindent 6 }}
+      {{- end }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector: {{ toYaml . | nindent 8 }}
       {{- end }}
       {{- if .Values.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName  }}
       {{- end }}
+      {{- with .Values.affinity }}
+      affinity: {{ toYaml . | nindent 8 -}}
+      {{- end }}
       serviceAccountName: {{ template "metricbeat.serviceAccount" . }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriod }}
       volumes:
-      {{- range .Values.secretMounts | default .Values.daemonset.secretMounts }}
+      {{- range .Values.secretMounts }}
       - name: {{ .name }}
         secret:
           secretName: {{ .secretName }}
@@ -61,16 +63,14 @@ spec:
         configMap:
           defaultMode: 0600
           name: {{ template "metricbeat.fullname" . }}-config
-      {{- else if .Values.daemonset.metricbeatConfig }}
-      - name: metricbeat-config
-        configMap:
-          defaultMode: 0600
-          name: {{ template "metricbeat.fullname" . }}-daemonset-config
       {{- end }}
       - name: data
         hostPath:
           path: {{ .Values.hostPathRoot }}/{{ template "metricbeat.fullname" . }}-{{ .Release.Namespace }}-data
           type: DirectoryOrCreate
+      - name: varlibdockercontainers
+        hostPath:
+          path: /var/lib/docker/containers
       - name: varrundockersock
         hostPath:
           path: /var/run/docker.sock
@@ -80,8 +80,8 @@ spec:
       - name: cgroup
         hostPath:
           path: /sys/fs/cgroup
-      {{- if .Values.extraVolumes | default .Values.daemonset.extraVolumes }}
-{{ toYaml ( .Values.extraVolumes | default .Values.daemonset.extraVolumes ) | indent 6 }}
+      {{- if .Values.extraVolumes }}
+{{ toYaml .Values.extraVolumes | indent 6 }}
       {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -104,7 +104,8 @@ spec:
 {{ toYaml .Values.livenessProbe | indent 10 }}
         readinessProbe:
 {{ toYaml .Values.readinessProbe | indent 10 }}
-        resources: {{ toYaml ( .Values.resources | default .Values.daemonset.resources ) | nindent 10 }}
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
         env:
         - name: POD_NAMESPACE
           valueFrom:
@@ -114,13 +115,19 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-{{- if .Values.extraEnvs | default .Values.daemonset.extraEnvs }}
-{{ toYaml ( .Values.extraEnvs | default .Values.daemonset.extraEnvs ) | indent 8 }}
+{{- if .Values.extraEnvs }}
+{{ toYaml .Values.extraEnvs | indent 8 }}
 {{- end }}
-        envFrom: {{ toYaml ( .Values.envFrom | default .Values.daemonset.envFrom ) | nindent 10 }}
-        securityContext: {{ toYaml ( .Values.podSecurityContext | default .Values.daemonset.securityContext ) | nindent 10 }}
+{{- if .Values.envFrom }}
+        envFrom:
+{{ toYaml .Values.envFrom | indent 10 }}
+{{- end }}
+{{- if .Values.podSecurityContext }}
+        securityContext:
+{{ toYaml .Values.podSecurityContext | indent 10 }}
+{{- end }}
         volumeMounts:
-        {{- range .Values.secretMounts | default .Values.daemonset.secretMounts }}
+        {{- range .Values.secretMounts }}
         - name: {{ .name }}
           mountPath: {{ .path }}
           {{- if .subPath }}
@@ -132,18 +139,14 @@ spec:
           mountPath: /usr/share/metricbeat/{{ $path }}
           readOnly: true
           subPath: {{ $path }}
-        {{ else }}
-        {{- range $path, $config := .Values.daemonset.metricbeatConfig }}
-        - name: metricbeat-config
-          mountPath: /usr/share/metricbeat/{{ $path }}
-          readOnly: true
-          subPath: {{ $path }}
-        {{- end }}
         {{- end }}
         - name: data
           mountPath: /usr/share/metricbeat/data
+        - name: varlibdockercontainers
+          mountPath: /var/lib/docker/containers
+          readOnly: true
         # Necessary when using autodiscovery; avoid mounting it otherwise
-        # See: https://www.elastic.co/guide/en/beats/metricbeat/7.7/configuration-autodiscover.html
+        # See: https://www.elastic.co/guide/en/beats/metricbeat/master/configuration-autodiscover.html
         - name: varrundockersock
           mountPath: /var/run/docker.sock
           readOnly: true
@@ -153,8 +156,8 @@ spec:
         - name: cgroup
           mountPath: /hostfs/sys/fs/cgroup
           readOnly: true
-        {{- if .Values.extraVolumeMounts | default .Values.daemonset.extraVolumeMounts }}
-{{ toYaml ( .Values.extraVolumeMounts | default .Values.daemonset.extraVolumeMounts ) | indent 8 }}
+        {{- if .Values.extraVolumeMounts }}
+{{ toYaml .Values.extraVolumeMounts | indent 8 }}
         {{- end }}
       {{- if .Values.extraContainers }}
 {{ tpl .Values.extraContainers . | indent 6 }}
