--- a/charts/elasticsearch/requirements.yaml
+++ b/charts/elasticsearch/requirements.yaml
@@ -8,6 +8,6 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     condition: global.fluentdEnabled
   - name: metricbeat
-    version: 7.x.x
+    version: 7.6.x
     repository: https://helm.elastic.co
     condition: global.metricbeatEnabled
