--- a/charts/elasticsearch/charts/metricbeat/values.yaml
+++ b/charts/elasticsearch/charts/metricbeat/values.yaml
@@ -97,7 +97,7 @@ envFrom: []
 # Root directory where metricbeat will write data to in order to persist registry data across pod restarts (file position and other metadata).
 hostPathRoot: /var/lib
 
-image: "docker.elastic.co/beats/metricbeat"
+image: "docker.elastic.co/beats/metricbeat-oss"
 imageTag: "7.6.2"
 imagePullPolicy: "IfNotPresent"
 imagePullSecrets: []
