--- a/charts/loki-stack/templates/dashboards.yaml
+++ b/charts/loki-stack/templates/dashboards.yaml
@@ -9,3 +9,7 @@ metadata:
 data:
   logging.json: |
 {{ (.Files.Glob "dashboards/logging.json").AsConfig | indent 2 }}
+  node.json: |
+{{ (.Files.Glob "dashboards/node.json").AsConfig | indent 2 }}
+  k8s.json: |
+{{ (.Files.Glob "dashboards/k8s.json").AsConfig | indent 2 }}
