feat(istio-operator)

--- a/charts/apps/templates/namespaces.yaml
+++ b/charts/apps/templates/namespaces.yaml
@@ -38,3 +38,23 @@ metadata:
     linkerd.io/inject: enabled
   labels:
     istio-injection: enabled
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: istio-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+    linkerd.io/inject: enabled
+  labels:
+    istio-injection: false
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: istio-operator
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+    linkerd.io/inject: enabled
+  labels:
+    istio-injection: false
