--- a/charts/apps/templates/namespaces.yaml
+++ b/charts/apps/templates/namespaces.yaml
@@ -6,8 +6,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     linkerd.io/inject: enabled
-  labels:
-    istio-injection: enabled
+    sidecar.istio.io/inject: true
 ---
 apiVersion: v1
 kind: Namespace
@@ -16,8 +15,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     linkerd.io/inject: enabled
-  labels:
-    istio-injection: enabled
+    sidecar.istio.io/inject: true
 ---
 apiVersion: v1
 kind: Namespace
@@ -26,8 +24,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     linkerd.io/inject: enabled
-  labels:
-    istio-injection: enabled
+    sidecar.istio.io/inject: true
 ---
 apiVersion: v1
 kind: Namespace
@@ -36,8 +33,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     linkerd.io/inject: enabled
-  labels:
-    istio-injection: enabled
+    sidecar.istio.io/inject: true
 ---
 apiVersion: v1
 kind: Namespace
@@ -46,5 +42,4 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
     linkerd.io/inject: enabled
-  labels:
-    istio-injection: false
+    sidecar.istio.io/inject: false
