--- a/manifests/argocd.yaml
+++ b/manifests/argocd.yaml
@@ -3,6 +3,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+    linkerd.io/inject: enabled
+    sidecar.istio.io/inject: true
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
