--- a/charts/apps/templates/namespaces.yaml
+++ b/charts/apps/templates/namespaces.yaml
@@ -2,20 +2,11 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: linkerd
-  annotations:
-    argocd.argoproj.io/sync-wave: "-1"
-    linkerd.io/inject: enabled
-    sidecar.istio.io/inject: true
----
-apiVersion: v1
-kind: Namespace
-metadata:
   name: heket-loki
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
-    linkerd.io/inject: enabled
-    sidecar.istio.io/inject: true
+    linkerd.io/inject: "enabled"
+    sidecar.istio.io/inject: "true"
 ---
 apiVersion: v1
 kind: Namespace
@@ -23,8 +14,8 @@ metadata:
   name: nginx-ingress
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
-    linkerd.io/inject: enabled
-    sidecar.istio.io/inject: true
+    linkerd.io/inject: "enabled"
+    sidecar.istio.io/inject: "true"
 ---
 apiVersion: v1
 kind: Namespace
@@ -32,8 +23,8 @@ metadata:
   name: kubernetes-dashboard
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
-    linkerd.io/inject: enabled
-    sidecar.istio.io/inject: true
+    linkerd.io/inject: "enabled"
+    sidecar.istio.io/inject: "true"
 ---
 apiVersion: v1
 kind: Namespace
@@ -41,5 +32,5 @@ metadata:
   name: istio-system
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
-    linkerd.io/inject: enabled
-    sidecar.istio.io/inject: false
+    linkerd.io/inject: "enabled"
+    sidecar.istio.io/inject: "true"
