--- a/manifests/argocd.yaml
+++ b/manifests/argocd.yaml
@@ -5,8 +5,8 @@ metadata:
   name: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
-    linkerd.io/inject: enabled
-    sidecar.istio.io/inject: true
+    linkerd.io/inject: "enabled"
+    sidecar.istio.io/inject: "true"
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
