feat(heket): dynamic app creation via values

--- a/charts/heket/values.yaml
+++ b/charts/heket/values.yaml
@@ -5,3 +5,11 @@ spec:
     repoURL: https://github.com/nold360/heket
     jaegerRepoURL: https://github.com/lib42/helm-charts
     targetRevision: HEAD
+
+heket:
+  apps:
+    - name: jaeger-operator
+      # FIXME: namespace: $name ?!
+      path: charts/jeager-operator
+      repoURL: https://github.com/lib42/helm-charts
+      targetRevision: HEAD
