--- a/charts/heket/templates/heket.yaml
+++ b/charts/heket/templates/heket.yaml
@@ -23,5 +23,5 @@ spec:
   source:
     path: {{ .path | quote }}
     repoURL: {{ .repoURL | quote }}
-    targetRevision: {{ .revision | quote }}
+    targetRevision: {{ .targetRevision | quote }}
 {{- end }}
