fix(heket): quote values

--- a/charts/heket/templates/heket.yaml
+++ b/charts/heket/templates/heket.yaml
@@ -27,8 +27,8 @@ spec:
     helm:
       parameters:
     {{- range .values }}
-        - name: {{ .name }}
-          value: {{ .value }}
+        - name: {{ .name | quote }}
+          value: {{ .value | quote }}
     {{- end }}
   {{- end }}
 {{- end }}
