--- a/charts/heket/templates/heket.yaml
+++ b/charts/heket/templates/heket.yaml
@@ -28,7 +28,7 @@ spec:
       parameters:
     {{- range .values }}
         - name: {{ .name | quote }}
-          value: {{ .value }}
+          value: {{ .value | quote }}
     {{- end }}
   {{- end }}
 {{- end }}
