--- a/charts/heqet/values.yaml
+++ b/charts/heqet/values.yaml
@@ -8,9 +8,18 @@ heqet:
       selfHeal: true
 
   apps:
+      # We can even manage ArgoCD & declare values here :)
+    - name: argocd
+      repoURL: https://github.com/argoproj/argo-helm
+      path: charts/argo-cd
+      values:
+        - name: dex.enabled
+          value: false
+    
     - name: heqet
       namespace: argocd
       path: charts/heqet
+
     - name: jaeger
       path: charts/jaeger-operator
       repoURL: https://github.com/jaegertracing/helm-charts
@@ -23,7 +32,6 @@ heqet:
       path: traefik
       repoURL: https://github.com/containous/traefik-helm-chart
  
-      # We can even declare values here :)
     - name: vault
       repoURL: https://github.com/hashicorp/vault-helm
       values:
