fix(heqet): dont quote values

--- a/charts/heqet/templates/heqet.yaml
+++ b/charts/heqet/templates/heqet.yaml
@@ -28,7 +28,7 @@ spec:
       parameters:
     {{- range .values }}
         - name: {{ .name | quote }}
-          value: {{ .value | quote }}
+          value: {{ .value }}
     {{- end }}
   {{- end }}
   syncPolicy:
