--- a/charts/heqet/values.yaml
+++ b/charts/heqet/values.yaml
@@ -72,7 +72,7 @@ heqet:
           value: bitnami/cert-manager
         - name: image.tag
           value: latest
-        - name: webhook.tag
+        - name: webhook.image.tag
           value: v0.15.1
         - name: webhook.enabled
           value: false
