--- a/charts/loki-stack/charts/grafana/values.yaml
+++ b/charts/loki-stack/charts/grafana/values.yaml
@@ -115,7 +115,7 @@ ingress:
   enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/tls-acme: "true"
   labels: {}
   path: /
   hosts:
