--- a/charts/loki-stack/charts/grafana/values.yaml
+++ b/charts/loki-stack/charts/grafana/values.yaml
@@ -113,7 +113,7 @@ service:
 
 ingress:
   enabled: true
-  annotations: {}
+  annotations:
     # kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
   labels: {}
