--- a/charts/loki-stack/charts/grafana/values.yaml
+++ b/charts/loki-stack/charts/grafana/values.yaml
@@ -116,6 +116,7 @@ ingress:
   annotations:
     # kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt
   labels: {}
   path: /
   hosts:
